@@ -11,6 +11,7 @@ import androidx.annotation.Nullable;
 import androidx.annotation.WorkerThread;
 import androidx.core.app.NotificationManagerCompat;
 
+import com.annimon.stream.Stream;
 import com.bumptech.glide.Glide;
 
 import org.signal.core.util.MapUtil;
@@ -45,7 +46,7 @@ import org.thoughtcrime.securesms.util.CommunicationActions;
 import org.thoughtcrime.securesms.util.DateUtils;
 import org.thoughtcrime.securesms.util.Environment;
 import org.thoughtcrime.securesms.util.RemoteConfig;
-import org.signal.core.util.ServiceUtil;
+import org.thoughtcrime.securesms.util.ServiceUtil;
 import org.thoughtcrime.securesms.util.TextSecurePreferences;
 import org.thoughtcrime.securesms.util.VersionTracker;
 import org.thoughtcrime.securesms.util.dynamiclanguage.DynamicLanguageContextWrapper;
@@ -57,7 +58,6 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 
 /**
  * Creating a new megaphone:
@@ -88,17 +88,18 @@ public final class Megaphones {
   static @Nullable Megaphone getNextMegaphone(@NonNull Context context, @NonNull Map<Event, MegaphoneRecord> records) {
     long currentTime = System.currentTimeMillis();
 
-    List<Megaphone> megaphones = buildDisplayOrder(context, records).entrySet().stream()
-                                                                    .filter(e -> {
-                                                                      MegaphoneRecord   record   = Objects.requireNonNull(records.get(e.getKey()));
-                                                                      MegaphoneSchedule schedule = e.getValue();
+    List<Megaphone> megaphones = Stream.of(buildDisplayOrder(context, records))
+                                       .filter(e -> {
+                                         MegaphoneRecord   record   = Objects.requireNonNull(records.get(e.getKey()));
+                                         MegaphoneSchedule schedule = e.getValue();
 
-                                                                      return !record.getFinished() && schedule.shouldDisplay(record.getInteractionCount(), record.getLastInteractionTime(), record.getFirstVisible(), currentTime);
-                                                                    })
-                                                                    .map(Map.Entry::getKey)
-                                                                    .map(records::get)
-                                                                    .map(record -> Megaphones.forRecord(context, record))
-                                                                    .filter(Objects::nonNull).collect(Collectors.toList());
+                                         return !record.isFinished() && schedule.shouldDisplay(record.getSeenCount(), record.getLastSeen(), record.getFirstVisible(), currentTime);
+                                       })
+                                       .map(Map.Entry::getKey)
+                                       .map(records::get)
+                                       .map(record -> Megaphones.forRecord(context, record))
+                                       .filterNot(Objects::isNull)
+                                       .toList();
 
     if (megaphones.size() > 0) {
       return megaphones.get(0);
@@ -117,7 +118,7 @@ public final class Megaphones {
     return new LinkedHashMap<>() {{
       put(Event.PINS_FOR_ALL, new PinsForAllSchedule());
       put(Event.CLIENT_DEPRECATED, SignalStore.misc().isClientDeprecated() ? ALWAYS : NEVER);
-      put(Event.NEW_LINKED_DEVICE, shouldShowNewLinkedDeviceMegaphone() ? ALWAYS : NEVER);
+      put(Event.NEW_LINKED_DEVICE, shouldShowNewLinkedDeviceMegaphone() ? ALWAYS: NEVER);
       put(Event.NOTIFICATIONS, shouldShowNotificationsMegaphone(context) ? RecurringSchedule.every(TimeUnit.DAYS.toMillis(30)) : NEVER);
       put(Event.GRANT_FULL_SCREEN_INTENT, shouldShowGrantFullScreenIntentPermission(context) ? RecurringSchedule.every(TimeUnit.DAYS.toMillis(3)) : NEVER);
       put(Event.BACKUP_SCHEDULE_PERMISSION, shouldShowBackupSchedulePermissionMegaphone(context) ? RecurringSchedule.every(TimeUnit.DAYS.toMillis(3)) : NEVER);
@@ -126,7 +127,7 @@ public final class Megaphones {
       put(Event.ENABLE_APP_UPDATES, shouldShowEnableAppUpdatesMegaphone(context) ? ALWAYS : NEVER);
       put(Event.DONATE_MOLLY, shouldShowDonateMegaphone(context, Event.DONATE_MOLLY, records) ? ShowForDurationSchedule.showForDays(7) : NEVER);
       put(Event.REMOTE_MEGAPHONE, shouldShowRemoteMegaphone(records) ? RecurringSchedule.every(TimeUnit.DAYS.toMillis(1)) : NEVER);
-      put(Event.LINKED_DEVICE_INACTIVE, shouldShowLinkedDeviceInactiveMegaphone() ? RecurringSchedule.every(TimeUnit.DAYS.toMillis(3)) : NEVER);
+      put(Event.LINKED_DEVICE_INACTIVE, shouldShowLinkedDeviceInactiveMegaphone() ? RecurringSchedule.every(TimeUnit.DAYS.toMillis(3)): NEVER);
 
       // Specifically putting backup reminders here, above PIN reminders
       put(Event.BACKUPS_GENERIC_UPSELL, shouldShowGenericBackupsMegaphone(context) ? new RecurringSchedule(TimeUnit.DAYS.toMillis(30), TimeUnit.DAYS.toMillis(120)) : NEVER);
@@ -140,7 +141,6 @@ public final class Megaphones {
       put(Event.SET_UP_YOUR_USERNAME, shouldShowSetUpYourUsernameMegaphone(records) ? ALWAYS : NEVER);
       put(Event.ADD_A_PROFILE_PHOTO, shouldShowAddAProfilePhotoMegaphone(context) ? ALWAYS : NEVER);
       put(Event.PNP_LAUNCH, shouldShowPnpLaunchMegaphone() ? ALWAYS : NEVER);
-      put(Event.INACTIVE_PRIMARY, shouldShowInactivePrimaryMegaphone() ? RecurringSchedule.every(TimeUnit.DAYS.toMillis(7)) : NEVER);
     }};
   }
 
@@ -200,8 +200,6 @@ public final class Megaphones {
         return buildVerifyBackupKeyMegaphone();
       case USE_NEW_ON_DEVICE_BACKUPS:
         return buildUseNewOnDeviceBackupsMegaphone();
-      case INACTIVE_PRIMARY:
-        return buildInactivePrimaryMegaphone();
       default:
         throw new IllegalArgumentException("Event not handled!");
     }
@@ -456,7 +454,8 @@ public final class Megaphones {
   private static boolean shouldShowDonateMegaphone(@NonNull Context context, @NonNull Event event, @NonNull Map<Event, MegaphoneRecord> records) {
     long timeSinceLastDonatePrompt = timeSinceLastDonatePrompt(event, records);
 
-    return timeSinceLastDonatePrompt > MIN_TIME_BETWEEN_DONATE_MEGAPHONES &&
+    return BuildConfig.SHOW_DONATIONS &&
+           timeSinceLastDonatePrompt > MIN_TIME_BETWEEN_DONATE_MEGAPHONES &&
            VersionTracker.getDaysSinceFirstInstalled(context) >= 7;
   }
 
@@ -518,7 +517,7 @@ public final class Megaphones {
         .setTitle(R.string.preferences_chats__backups)
         .setBody(R.string.TurnOnSignalBackups__body)
         .setActionButton(R.string.BackupsSettingsFragment_set_up, (megaphone, controller) -> {
-          Intent intent = AppSettingsActivity.backupsSettings(controller.getMegaphoneActivity(), true);
+          Intent intent = AppSettingsActivity.backupsSettings(controller.getMegaphoneActivity());
 
           controller.onMegaphoneNavigationRequested(intent);
           controller.onMegaphoneSnooze(Event.BACKUPS_GENERIC_UPSELL);
@@ -566,23 +565,6 @@ public final class Megaphones {
         .setSecondaryButton(R.string.UseNewOnDeviceBackups__not_now, (megaphone, controller) -> {
           controller.onMegaphoneSnooze(Event.USE_NEW_ON_DEVICE_BACKUPS);
         })
-        .build();
-  }
-
-  private static @NonNull Megaphone buildInactivePrimaryMegaphone() {
-    return new Megaphone.Builder(Event.INACTIVE_PRIMARY, Megaphone.Style.BASIC)
-        .setImage(R.drawable.megaphone_inactive_primary)
-        .setTitle(R.string.InactivePrimary__title)
-        .setBody(R.string.InactivePrimary__body)
-        .setActionButton(R.string.InactivePrimary__got_it, (megaphone, controller) -> {
-          controller.onMegaphoneSnooze(Event.INACTIVE_PRIMARY);
-        })
-        .setSecondaryButton(R.string.InactivePrimary__learn_more, ((megaphone, controller) -> {
-          CommunicationActions.openBrowserLink(
-              controller.getMegaphoneActivity(),
-              controller.getMegaphoneActivity().getString(R.string.inactive_primary_support)
-          );
-        }))
         .build();
   }
 
@@ -638,7 +620,7 @@ public final class Megaphones {
    */
   private static boolean shouldShowSetUpYourUsernameMegaphone(@NonNull Map<Event, MegaphoneRecord> records) {
     boolean                        hasUsername                    = SignalStore.account().isRegistered() && SignalStore.account().getUsername() != null;
-    boolean                        hasCompleted                   = MapUtil.mapOrDefault(records, Event.SET_UP_YOUR_USERNAME, MegaphoneRecord::getFinished, false);
+    boolean                        hasCompleted                   = MapUtil.mapOrDefault(records, Event.SET_UP_YOUR_USERNAME, MegaphoneRecord::isFinished, false);
     long                           phoneNumberDiscoveryDisabledAt = SignalStore.phoneNumberPrivacy().getPhoneNumberDiscoverabilityModeTimestamp();
     PhoneNumberDiscoverabilityMode listingMode                    = SignalStore.phoneNumberPrivacy().getPhoneNumberDiscoverabilityMode();
 
@@ -652,10 +634,6 @@ public final class Megaphones {
 
   private static boolean shouldShowPnpLaunchMegaphone() {
     return SignalStore.account().isPrimaryDevice() && TextUtils.isEmpty(SignalStore.account().getUsername()) && !SignalStore.uiHints().hasCompletedUsernameOnboarding();
-  }
-
-  private static boolean shouldShowInactivePrimaryMegaphone() {
-    return SignalStore.account().isLinkedDevice() && SignalStore.account().hasInactivePrimaryDeviceAlert();
   }
 
   private static boolean shouldShowGenericBackupsMegaphone(@NonNull Context context) {
@@ -726,8 +704,7 @@ public final class Megaphones {
     NEW_LINKED_DEVICE("new_linked_device"),
     BACKUPS_GENERIC_UPSELL("turn_on_signal_backups"),
     VERIFY_BACKUP_KEY("verify_backup_key"),
-    USE_NEW_ON_DEVICE_BACKUPS("use_new_on_device_backups"),
-    INACTIVE_PRIMARY("inactive_primary");
+    USE_NEW_ON_DEVICE_BACKUPS("use_new_on_device_backups");
 
     private final String key;
 
